updating upload page and publish and add accept and reject button

--- a/user/pending.html
+++ b/user/pending.html
@@ -3,12 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ICCTory - Pending Requests</title>
+    <title>ICCTory - Pending Papers</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="../css/pending.css" />
+    <link rel="stylesheet" href="../css/publish.css" />
+    <style>
+      .action-btn {
+        padding: 5px 12px;
+        border: none;
+        border-radius: 6px;
+        font-size: 12px;
+        font-weight: 600;
+        cursor: pointer;
+        display: inline-flex;
+        align-items: center;
+        gap: 5px;
+        transition: opacity 0.2s;
+      }
+      .action-btn:hover {
+        opacity: 0.85;
+      }
+      .accept-btn {
+        background: #198754;
+        color: #fff;
+      }
+      .reject-btn {
+        background: #dc3545;
+        color: #fff;
+      }
+      .col-actions {
+        display: flex;
+        gap: 8px;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
     <div class="dashboard-container">
@@ -20,24 +50,24 @@
           <h1 class="brand-title">ICCTory</h1>
         </div>
         <nav class="nav-menu">
-          <a href="../index.html" class="nav-item">
-            <i class="fa-solid fa-house"></i> Home
-          </a>
-          <a href="upload.html" class="nav-item">
-            <i class="fa-solid fa-cloud-arrow-up"></i> Upload
-          </a>
-          <a href="publish.html" class="nav-item active">
-            <i class="fa-solid fa-clipboard-list"></i> Your Requests
-          </a>
-          <a href="research.html" class="nav-item">
-            <i class="fa-solid fa-file-lines"></i> Research Papers
-          </a>
-          <a href="about.html" class="nav-item">
-            <i class="fa-solid fa-circle-info"></i> About
-          </a>
-          <a href="profile.html" class="nav-item">
-            <i class="fa-solid fa-user"></i> Profile
-          </a>
+          <a href="../index.html" class="nav-item"
+            ><i class="fa-solid fa-house"></i> Home</a
+          >
+          <a href="upload.html" class="nav-item"
+            ><i class="fa-solid fa-cloud-arrow-up"></i> Upload</a
+          >
+          <a href="publish.html" class="nav-item active"
+            ><i class="fa-solid fa-clipboard-list"></i> Your Requests</a
+          >
+          <a href="research.html" class="nav-item"
+            ><i class="fa-solid fa-file-lines"></i> Research Papers</a
+          >
+          <a href="about.html" class="nav-item"
+            ><i class="fa-solid fa-circle-info"></i> About</a
+          >
+          <a href="profile.html" class="nav-item"
+            ><i class="fa-solid fa-user"></i> Profile</a
+          >
         </nav>
       </aside>
 
@@ -46,31 +76,28 @@
           <header class="content-header">
             <div class="header-info">
               <h2 class="page-title">Pending</h2>
-              <p class="subtitle">
-                Your research papers currently under review.
-              </p>
+              <p class="subtitle">Research papers awaiting review.</p>
             </div>
             <div class="filter-bar">
-              <a href="publish.html" class="filter-link">
-                <button class="filter-btn">Published</button>
-              </a>
-              <a href="pending.html" class="filter-link">
-                <button class="filter-btn active">Pending</button>
-              </a>
-              <a href="reject.html" class="filter-link">
-                <button class="filter-btn">Rejected</button>
-              </a>
+              <a href="publish.html" class="filter-link"
+                ><button class="filter-btn">Published</button></a
+              >
+              <a href="pending.html" class="filter-link"
+                ><button class="filter-btn active">Pending</button></a
+              >
+              <a href="reject.html" class="filter-link"
+                ><button class="filter-btn">Rejected</button></a
+              >
             </div>
           </header>
-
           <hr class="divider" />
-
           <div class="table-container">
             <div class="table-header-labels">
               <span>User</span>
               <span>Research Title</span>
               <span>Date Submitted</span>
               <span>Status</span>
+              <span>Actions</span>
             </div>
             <div class="request-container" id="pendingList"></div>
           </div>
@@ -78,7 +105,8 @@
       </main>
     </div>
 
-    <script src="/js/pending.js"></script>
+    <script type="module" src="../js/firebase.js"></script>
+    <script type="module" src="../js/pending.js"></script>
     <script type="module" src="./js/authGuard.js"></script>
   </body>
 </html>
