--- a/user/publish.html
+++ b/user/publish.html
@@ -20,24 +20,24 @@
           <h1 class="brand-title">ICCTory</h1>
         </div>
         <nav class="nav-menu">
-          <a href="../index.html" class="nav-item">
-            <i class="fa-solid fa-house"></i> Home
-          </a>
-          <a href="upload.html" class="nav-item">
-            <i class="fa-solid fa-cloud-arrow-up"></i> Upload
-          </a>
-          <a href="publish.html" class="nav-item active">
-            <i class="fa-solid fa-clipboard-list"></i> Your Requests
-          </a>
-          <a href="research.html" class="nav-item">
-            <i class="fa-solid fa-file-lines"></i> Research Papers
-          </a>
-          <a href="about.html" class="nav-item">
-            <i class="fa-solid fa-circle-info"></i> About
-          </a>
-          <a href="profile.html" class="nav-item">
-            <i class="fa-solid fa-user"></i> Profile
-          </a>
+          <a href="../index.html" class="nav-item"
+            ><i class="fa-solid fa-house"></i> Home</a
+          >
+          <a href="upload.html" class="nav-item"
+            ><i class="fa-solid fa-cloud-arrow-up"></i> Upload</a
+          >
+          <a href="publish.html" class="nav-item active"
+            ><i class="fa-solid fa-clipboard-list"></i> Your Requests</a
+          >
+          <a href="research.html" class="nav-item"
+            ><i class="fa-solid fa-file-lines"></i> Research Papers</a
+          >
+          <a href="about.html" class="nav-item"
+            ><i class="fa-solid fa-circle-info"></i> About</a
+          >
+          <a href="profile.html" class="nav-item"
+            ><i class="fa-solid fa-user"></i> Profile</a
+          >
         </nav>
       </aside>
 
@@ -51,20 +51,18 @@
               </p>
             </div>
             <div class="filter-bar">
-              <a href="publish.html" class="filter-link">
-                <button class="filter-btn active">Published</button>
-              </a>
-              <a href="pending.html" class="filter-link">
-                <button class="filter-btn">Pending</button>
-              </a>
-              <a href="reject.html" class="filter-link">
-                <button class="filter-btn">Rejected</button>
-              </a>
+              <a href="publish.html" class="filter-link"
+                ><button class="filter-btn active">Published</button></a
+              >
+              <a href="pending.html" class="filter-link"
+                ><button class="filter-btn">Pending</button></a
+              >
+              <a href="reject.html" class="filter-link"
+                ><button class="filter-btn">Rejected</button></a
+              >
             </div>
           </header>
-
           <hr class="divider" />
-
           <div class="table-container">
             <div class="table-header-labels">
               <span>User</span>
@@ -78,7 +76,8 @@
       </main>
     </div>
 
-    <script src="/js/publish.js"></script>
+    <script type="module" src="../js/firebase.js"></script>
+    <script type="module" src="../js/publish.js"></script>
     <script type="module" src="./js/authGuard.js"></script>
   </body>
 </html>
