--- a/user/upload.html
+++ b/user/upload.html
@@ -19,26 +19,25 @@
           </div>
           <h1 class="brand-title">ICCTory</h1>
         </div>
-
         <nav class="nav-menu">
-          <a href="../index.html" class="nav-item">
-            <i class="fa-solid fa-house"></i> Home
-          </a>
-          <a href="upload.html" class="nav-item active">
-            <i class="fa-solid fa-cloud-arrow-up"></i> Upload
-          </a>
-          <a href="publish.html" class="nav-item">
-            <i class="fa-solid fa-clipboard-list"></i> Your Requests
-          </a>
-          <a href="research.html" class="nav-item">
-            <i class="fa-solid fa-file-lines"></i> Research Papers
-          </a>
-          <a href="about.html" class="nav-item">
-            <i class="fa-solid fa-circle-info"></i> About
-          </a>
-          <a href="profile.html" class="nav-item">
-            <i class="fa-solid fa-user"></i> Profile
-          </a>
+          <a href="../index.html" class="nav-item"
+            ><i class="fa-solid fa-house"></i> Home</a
+          >
+          <a href="upload.html" class="nav-item active"
+            ><i class="fa-solid fa-cloud-arrow-up"></i> Upload</a
+          >
+          <a href="publish.html" class="nav-item"
+            ><i class="fa-solid fa-clipboard-list"></i> Your Requests</a
+          >
+          <a href="research.html" class="nav-item"
+            ><i class="fa-solid fa-file-lines"></i> Research Papers</a
+          >
+          <a href="about.html" class="nav-item"
+            ><i class="fa-solid fa-circle-info"></i> About</a
+          >
+          <a href="profile.html" class="nav-item"
+            ><i class="fa-solid fa-user"></i> Profile</a
+          >
         </nav>
       </aside>
 
@@ -106,30 +105,22 @@
           </div>
 
           <div class="action-section">
-            <input
-              type="file"
-              id="real-file"
-              hidden="hidden"
-              accept=".pdf,.doc,.docx"
-            />
-
+            <input type="file" id="real-file" hidden accept=".pdf,.doc,.docx" />
             <button type="button" class="file-upload-btn" id="custom-button">
               Choose File <span class="plus">+</span>
             </button>
-
             <span id="custom-text">No file chosen, yet.</span>
-
             <div class="arrow-indicator">
               <i class="fa-solid fa-right-long"></i>
             </div>
-
             <button type="submit" class="confirm-btn">Confirm & Submit</button>
           </div>
         </form>
       </main>
     </div>
 
-    <script src="/js/upload.js"></script>
+    <script type="module" src="../js/firebase.js"></script>
+    <script type="module" src="../js/upload.js"></script>
     <script type="module" src="./js/authGuard.js"></script>
   </body>
 </html>
