--- a/user/upload.html
+++ b/user/upload.html
@@ -20,24 +20,24 @@
           <h1 class="brand-title">ICCTory</h1>
         </div>
         <nav class="nav-menu">
-          <a href="../index.html" class="nav-item"
-            ><i class="fa-solid fa-house"></i> Home</a
-          >
-          <a href="upload.html" class="nav-item active"
-            ><i class="fa-solid fa-cloud-arrow-up"></i> Upload</a
-          >
-          <a href="publish.html" class="nav-item"
-            ><i class="fa-solid fa-clipboard-list"></i> Your Requests</a
-          >
-          <a href="research.html" class="nav-item"
-            ><i class="fa-solid fa-file-lines"></i> Research Papers</a
-          >
-          <a href="about.html" class="nav-item"
-            ><i class="fa-solid fa-circle-info"></i> About</a
-          >
-          <a href="profile.html" class="nav-item"
-            ><i class="fa-solid fa-user"></i> Profile</a
-          >
+          <a href="../index.html" class="nav-item">
+            <i class="fa-solid fa-house"></i> Home
+          </a>
+          <a href="upload.html" class="nav-item active">
+            <i class="fa-solid fa-cloud-arrow-up"></i> Upload
+          </a>
+          <a href="publish.html" class="nav-item">
+            <i class="fa-solid fa-clipboard-list"></i> Your Requests
+          </a>
+          <a href="research.html" class="nav-item">
+            <i class="fa-solid fa-file-lines"></i> Research Papers
+          </a>
+          <a href="about.html" class="nav-item">
+            <i class="fa-solid fa-circle-info"></i> About
+          </a>
+          <a href="profile.html" class="nav-item">
+            <i class="fa-solid fa-user"></i> Profile
+          </a>
         </nav>
       </aside>
 
