--- a/user/upload.html
+++ b/user/upload.html
@@ -119,7 +119,7 @@
       </main>
     </div>
 
-    <script type="module" src="../js/firebase.js"></script>
-    <script type="module" src="../js/upload.js"></script>
+    <script type="module" src="./js/firebase.js"></script>
+    <script type="module" src="./js/upload.js"></script>
   </body>
 </html>
