--- a/adminPage/admin_about.html
+++ b/adminPage/admin_about.html
@@ -110,5 +110,12 @@
         </div>
       </main>
     </div>
+    <!-- For all pages inside /adminpage/ folder -->
+    <script type="module">
+      import { requireRole } from "../js/auth_redirect.js";
+      requireRole("admin", (user) => {
+        console.log("Admin authenticated:", user.email);
+      });
+    </script>
   </body>
 </html>
