--- a/adminPage/admin_publish.html
+++ b/adminPage/admin_publish.html
@@ -63,12 +63,12 @@
         </div>
       </main>
     </div>
-    <!-- Add this inside admin_index.html, before </body> -->
+    <script type="module" src="../js/admin_publish.js"></script>
+    <!-- For all pages inside /adminpage/ folder -->
     <script type="module">
-      import { requireRole } from "./js/auth_redirect.js";
+      import { requireRole } from "../js/auth_redirect.js";
       requireRole("admin", (user) => {
         console.log("Admin authenticated:", user.email);
-        // Optionally display user info in the UI
       });
     </script>
   </body>
