add id to upload

--- a/user/upload.html
+++ b/user/upload.html
@@ -91,6 +91,7 @@
           <div class="form-group">
             <label>Research Title</label>
             <input
+              id="researchTitle"
               type="text"
               class="custom-input"
               placeholder="Enter the full title of your research..."
@@ -101,6 +102,7 @@
           <div class="form-group">
             <label>Authors</label>
             <input
+              id="researchAuthors"
               type="text"
               class="custom-input"
               placeholder="e.g. Juan Dela Cruz, Maria Clara"
@@ -111,7 +113,7 @@
           <div class="form-row">
             <div class="form-group">
               <label>Department</label>
-              <select class="custom-input">
+              <select class="custom-input" id="researchDept">
                 <option value="AS">Arts & Sciences</option>
                 <option value="BA">Business & Accountancy</option>
                 <option value="CS">Computer Studies</option>
@@ -129,7 +131,7 @@
             </div>
             <div class="form-group">
               <label>School Year</label>
-              <select class="custom-input">
+              <select class="custom-input" id="researchYear">
                 <option value="2021">2021</option>
                 <option value="2022">2022</option>
                 <option value="2023">2023</option>
