--- a/user/upload.html
+++ b/user/upload.html
@@ -172,6 +172,7 @@
     </div>
 
     <!-- ✅ Both in js/ folder, called from user/ so path is ../js/ -->
+    <!-- ✅ This is already correct -->
     <script type="module" src="../js/firebase.js"></script>
     <script type="module" src="../js/upload.js"></script>
   </body>
