fix the name of path

--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -25,16 +25,16 @@
           <a href="admin_index.html" class="nav-item active">
             <i class="fa-solid fa-house"></i> Home
           </a>
-          <a href="adminpage/admin_publish.html" class="nav-item">
+          <a href="admin/admin_publish.html" class="nav-item">
             <i class="fa-solid fa-clipboard-list"></i> Requests
           </a>
-          <a href="adminpage/admin_research.html" class="nav-item">
+          <a href="admin/admin_research.html" class="nav-item">
             <i class="fa-solid fa-file-lines"></i> Research Papers
           </a>
-          <a href="adminpage/admin_about.html" class="nav-item">
+          <a href="admin/admin_about.html" class="nav-item">
             <i class="fa-solid fa-circle-info"></i> About
           </a>
-          <a href="adminpage/admin_profile.html" class="nav-item">
+          <a href="admin/admin_profile.html" class="nav-item">
             <i class="fa-solid fa-user"></i> Profile
           </a>
         </nav>
