--- a/admin/admin_about.html
+++ b/admin/admin_about.html
@@ -110,7 +110,7 @@
         </div>
       </main>
     </div>
-    <!-- For all pages inside /adminpage/ folder -->
+    <!-- All files inside /admin/ folder -->
     <script type="module">
       import { requireRole } from "../js/auth_redirect.js";
       requireRole("admin", (user) => {
