--- a/admin/admin_pending.html
+++ b/admin/admin_pending.html
@@ -65,6 +65,7 @@
     </div>
     <script type="module" src="../js/admin_pending.js"></script>
     <!-- For all pages inside /adminpage/ folder -->
+    <!-- All files inside /admin/ folder -->
     <script type="module">
       import { requireRole } from "../js/auth_redirect.js";
       requireRole("admin", (user) => {
