--- a/admin/admin_reject.html
+++ b/admin/admin_reject.html
@@ -64,7 +64,7 @@
       </main>
     </div>
     <script type="module" src="../js/admin_reject.js"></script>
-    <!-- For all pages inside /adminpage/ folder -->
+    <!-- All files inside /admin/ folder -->
     <script type="module">
       import { requireRole } from "../js/auth_redirect.js";
       requireRole("admin", (user) => {
