--- a/admin/admin_research.html
+++ b/admin/admin_research.html
@@ -213,7 +213,7 @@
       </main>
     </div>
     <script src="/js/research.js"></script>
-    <!-- For all pages inside /adminpage/ folder -->
+    <!-- All files inside /admin/ folder -->
     <script type="module">
       import { requireRole } from "../js/auth_redirect.js";
       requireRole("admin", (user) => {
