fixing the path for the admin pages

--- a/admin/admin_pending.html
+++ b/admin/admin_pending.html
@@ -22,19 +22,19 @@
         </div>
 
         <nav class="nav-menu">
-          <a href="../admin_index.html" class="nav-item">
+          <a href="/admin_index.html" class="nav-item active">
             <i class="fa-solid fa-house"></i> Home
           </a>
-          <a href="admin_publish.html" class="nav-item active">
+          <a href="/admin/admin_publish.html" class="nav-item">
             <i class="fa-solid fa-clipboard-list"></i> Requests
           </a>
-          <a href="admin_research.html" class="nav-item">
+          <a href="/admin/admin_research.html" class="nav-item">
             <i class="fa-solid fa-file-lines"></i> Research Papers
           </a>
-          <a href="admin_about.html" class="nav-item">
+          <a href="/admin/admin_about.html" class="nav-item">
             <i class="fa-solid fa-circle-info"></i> About
           </a>
-          <a href="admin_profile.html" class="nav-item">
+          <a href="/admin/admin_profile.html" class="nav-item">
             <i class="fa-solid fa-user"></i> Profile
           </a>
         </nav>
