--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -89,6 +89,7 @@
         </div>
       </main>
     </div>
+    <script type="module" src="/js/admin_index.js"></script>
     <!-- All files inside /admin/ folder -->
     <script type="module">
       import { requireRole } from "../js/auth_redirect.js";
