fix the admin index

--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -55,7 +55,10 @@
             <span>Browse All Papers</span>
           </button>
         </div>
-
+        <h1 id="user-greeting"></h1>
+        <br />
+        <br />
+        <br />
         <div class="stats-container">
           <div class="stat-card">
             <div class="stat-icon">
