--- a/admin/admin_profile.html
+++ b/admin/admin_profile.html
@@ -130,7 +130,7 @@
       </main>
     </div>
     <!-- All files inside /admin/ folder -->
-    <script type="module">
+    <script type="module" src="/js/admin_profile.js">
       import { requireRole } from "../js/auth_redirect.js";
       requireRole("admin", (user) => {
         console.log("Admin authenticated:", user.email);
